test/corpus/base.txt
==================
Void
==================

#define macro MAIN() = takes (0) returns (0) {}

---

(source_file
  (definition
    (keyword_definition
      (def_val)
      (keyword)
      (identifier)
      (parameters)
      (val_parameters
        (keyword)
        (parameters
          (parameter)
        )
      )
      (val_parameters
        (keyword)
        (parameters
          (parameter)
        )
      )
      (block)
    )
  )
)
